# anavitrade-trading

./: .env.example  .gitignore  .vercelignore  CLAUDE.md  README.md  drizzle.config.ts  findings.md  index.html  package.json  pnpm-lock.yaml  progress.md  skills-lock.json  task_plan.md  tsconfig.json  vite.config.ts  wrangler.toml
icr_strategy/: CHANGELOG.md  CLAUDE_START_HERE.md  FINAL_EXECUTION_LOG.txt  FINAL_HANDOFF_EXECUTION_LOG.txt  QUANT_AUDIT_REPORT.md  README.md  pyproject.toml  requirements.txt
icr_strategy/binance_attempt_outputs/: binance_altcoin_manifest.csv  binance_htf_run_summary.json
icr_strategy/binance_attempt_outputs_v7/: binance_altcoin_manifest.csv  binance_htf_run_summary.json
icr_strategy/coinlegs_scrape_attempt_outputs/: coinlegs_enriched_snapshot.csv  coinlegs_raw_snapshot.csv  coinlegs_scrape_errors.csv  matrix_snapshot.csv  per_symbol_stats.csv  regime_report.csv  timeframe_stats.csv  trades.csv
icr_strategy/docs/: ALGO_BLUEPRINT_FULL.md  BINANCE_HTF_COILING_PUMP_RESEARCH.md  CLAUDE_MASTER_PROMPT.md  CODEX_NEXT_PROMPT.md  COINLEGS_FUSION.md  FILE_MAP_FOR_CLAUDE.md  HANDOFF_REALITY_CHECK.md  IMPLEMENTATION_GAPS_FOR_CLAUDE.md  MEMORY_INTEGRATION.md  QUANT_AUDIT_200.csv  QUANT_AUDIT_200.md  REAL_EDGE_RUNBOOK.md  RUNBOOK_FOR_REAL_DATA.md  coinlegs_snapshot_coil_example.csv
icr_strategy/examples/: COILUSDT_4h.csv
icr_strategy/handoff_smoke_outputs/: exit_reason_stats.csv  sample_ohlcv.csv  score_bucket_stats.csv  signals.csv
icr_strategy/icr/: __init__.py  audit.py  backtester.py  binance_data.py  coiling_pump.py  coinlegs.py  config.py  (+18 more)
(+562 files in other folders)
